# cbt

./: .gitignore  LICENSE  README.md
BB_BR_MPC/: README.md  blueboat.txt  bluerov2.txt  fish.txt
BB_BR_MPC/br2_stonefish/: CMakeLists.txt  README.md  package.xml
BB_BR_MPC/br2_stonefish/data/fish/: blend_Shark_v5.mtl
BB_BR_MPC/br2_stonefish/launch/: blueboat_bluerov_heavy.launch.py  blueboat_bluerov_heavy_fish.launch.py
BB_BR_MPC/br2_stonefish/scenarios/: blueboat_bluerov_heavy.scn  blueboat_bluerov_heavy_env.scn  blueboat_bluerov_heavy_fish_env copy.scn  blueboat_bluerov_heavy_fish_env.scn  fish.scn
BB_BR_MPC/modelData/: _model_data.txt
BB_BR_MPC/optctrl/: README.md  package.xml  setup.cfg  setup.py
BB_BR_MPC/optctrl/config/: config.yaml  force_to_pwm_16V.pkl
BB_BR_MPC/optctrl/ctrl/: mpc.py
BB_BR_MPC/optctrl/fossens/: fossen19.py  utils.py
BB_BR_MPC/optctrl/optctrl/: config.yaml  mpcctrl.py  reference.py  referencevarying.py  utils.py
bt_framework/: README.md
bt_framework/bt_policy/: CMakeLists.txt  README.md  package.xml
bt_framework/bt_policy/action/: Bt.action
bt_framework/bt_policy/bt_tree/: inspect_structure_base.tree
bt_framework/bt_policy/bt_xml/: adjust_tether.xml  asv_closer_rov.xml  deocclusion_maneuver_fish.xml  dummy_test_one.xml  dummy_test_two.xml  dummy_test_zero.xml  follow_tether_tension.xml  hs_test_one.xml  hs_test_zero.xml  inspect_anode_left.xml  inspect_anode_right.xml  inspect_anodes.xml  inspect_offshore_base.xml  look_around.xml
bt_framework/bt_policy/config/: bt_config.yaml  resolution_map.yaml
bt_framework/bt_policy/include/bt_policy/: bt_manager.hpp  check_no_occluder_node.h  contextual_condition_base.h  deocclude_fish_node.h  dummy_nodes.h  emergency.h  find_emergency.h  follow_bluerov_node.h  help_seeker_node_base.h  inspect_object_node.h  nodes_utils.h  post_cond_control_nodes.h  release_tether_node.h  test_help_seeker_node.h  tinyxml2.h  transition_to_pose_node.h  utils.h
bt_framework/bt_policy/msg/: BtManagerReply.msg
bt_framework/bt_policy/nodes/: bt_manager.cpp  check_no_occluder_node.cpp  contextual_condition_base.cpp  crossdoor_nodes.cpp  deocclude_fish_node.cpp  dummy_nodes.cpp  follow_bluerov_node.cpp  help_seeker_node_base.cpp  inspect_object_node.cpp  movebase_node.cpp  nodes_utils.cpp  post_cond_control_nodes.cpp  release_tether_node.cpp  test_help_seeker_node.cpp  transition_to_pose_node.cpp  utils.cpp
bt_framework/bt_policy/scenario/: failure.xml  scenario.xml
bt_framework/bt_policy/scenario_db/: failure_oil_structure.xml  oil_structure_inspection.xml  park_car.xml  scenario_seamapping.xml  seafloor_mapping.xml
bt_framework/bt_policy/scripts/: detect_object.py
bt_framework/bt_policy/scripts/models/: models.txt
bt_framework/bt_policy/src/: bt_action_server.cpp  bt_manager_app.cpp  emergency.cpp  exec_bt_manager.cpp  find_emergency.cpp  tinyxml2.cpp
bt_framework/bt_policy/srv/: GetDetections.srv  HelpRequest.srv
bt_framework/modelData/: _model_data.txt
bt_framework/optreferences/: CMakeLists.txt  README.md  package.xml
bt_framework/optreferences/action/: FollowBlueRov.action  TransitionToPose.action
bt_framework/optreferences/include/optreferences/: bb_position_hold_action_server.hpp  optreferences_action_server.hpp
bt_framework/optreferences/launch/: bb_pos_hold_act_serv.launch.py  optref_act_serv.launch.py
bt_framework/optreferences/src/: bb_position_hold_action_server.cpp  bb_position_hold_action_server_main.cpp  optreferences_action_server.cpp  optreferences_action_server_main.cpp
