<package format="3">
  <name>bt_policy</name>
  <version>0.1.0</version>
  <description>Project to elaborate</description>

  <maintainer email="cernicchiarocarlo@gmail.com">Carlo Cernicchiaro</maintainer>
  <license>Apache 2.0</license>
  <author>Carlo Cernicchiaro</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>behaviortree_cpp</depend>
  <depend>rclcpp</depend>
  <depend>action_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>yaml-cpp</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
